Changes from jTDS 0.9
=========================

09/30/2004 - Alin Sinpalean
 o Added some more information (from the FreeTDS mailing list) on
   sp_cursoroption parameters.

09/29/2004 - Alin Sinpalean
 o Conversion to LONGVARCHAR from most types was broken. Fixed.

===============================================================================
09/29/2004 - jTDS 0.9 released
===============================================================================

Changes from jTDS 0.9-rc2
=========================

09/28/2004 - Alin Sinpalean
 o Updated the FAQ, feature matrix and some of the other HTML files.
 o Updated driver version as returned by Driver and DatabaseMetaData to "0.9".
 o Minor javadoc cleanup.
 o Corrected bug [1036059] getTimestamp with Calendar applies tzone offset
   wrong way. The getTimestamp(), getTime() and getDate() methods with Calendar
   parameters were applying the time zone difference the same way as the set
   methods (hope it's not the set methods that were wrong, the JDBC spec is
   VERY vague about how the Calendar should be used).
 o Corrected bug [1036058] DataSource implementation broken. Thanks, Mike for
   finding this before the new release.

09/27/2004 - Alin Sinpalean
 o Update counts are read and cached completely (either until the end of the
   response or until a ResultSet is encountered) and exceptions are thrown when
   an output parameter is read before being set. This means that stored
   procedures that return only update counts are processed completely when
   executed and output parameter values are available right away.
 o Implemented some more support for spcursorprepare (still not complete, so
   not used yet).
 o Updated the documentation of sp_cursorprepare in apiCursors.html and some
   minor things in TDS.html.
 o prepareSql=3 (sp_prepare) is supported by TDS 7.0, small update to use it in
   jTDS (until now it was downgraded to sp_executesql -- prepareSql=2).

09/24/2004 - Alin Sinpalean