@@ -71,8 +71,9 @@
         applies. For historical reasons and to recognize the effort of the
         original developer, we chose to also display here that copyright
         notice. Please note that you do not have to do the same or follow the
-        terms of this license, whether you want to use jTDS in a project of
-        your own or derive ir. The original FreeTDS copyright notice follows:
+        terms of this license, whether you want to use jTDS as a library or
+        produce a derivative work. The original FreeTDS copyright notice
+        follows:
         </p>
       <blockquote>
         <p>
