@@ -1,45 +1,68 @@
-ISO_1=1|ISO-8859-1
+# The SQL Server iso_1 charset is actually Microsoft's extended version, Cp1252
+
+ISO_1=1|Cp1252
 ISO15=1|ISO-8859-15
-CP850=1|windows-1252
-CP1250=1|windows-1250
-CP1251=1|windows-1251
-CP1253=1|windows-1253
-CP1254=1|windows-1254
-CP1255=1|windows-1255
-CP1256=1|windows-1256
-CP1257=1|windows-1257
-CP949=2|x-windows-949
-CP950=2|x-windows-950
-CP1258=1|windows-1258
-CP932=2|windows-31j
-ASCII_7=1|US-ASCII
-ASCII_8=1|US-ASCII
-CP437=1|US-ASCII
-ROMAN8=1|ISO-8859-1
-MAC=1|ISO-8859-1
-GREEK8=1|ISO-8859-7
-ISO15=1|ISO-8859-15
-ISO88592=1|ISO-8859-2
-ISO88598=1|ISO-8859-8
-MACGRK2=1|ISO-8859-7
-MAC_CYR=1|ISO-8859-5
-SJIS=2|Shift_JIS
-UTF8=4|UTF-8
-BIG5=2|Big5
-BIG5HK=2|Big5-HKSCS
-CP1252=1|windows-1252
-CP936=2|x-mswin-936
-EUCCNS=2|x-EUC-CN
-EUCJIS=3|EUC-JP
 ISO88592=1|ISO-8859-2
 ISO88595=1|ISO-8859-5
 ISO88596=1|ISO-8859-6
 ISO88597=1|ISO-8859-7
 ISO88598=1|ISO-8859-8
 ISO88599=1|ISO-8859-9
+CP437=1|Cp437
+CP850=1|Cp850
+CP932=2|windows-31j
+CP936=2|x-mswin-936
+CP949=2|Cp949
+CP950=2|Cp950
+CP1250=1|Cp1250
+CP1251=1|Cp1251
+CP1252=1|Cp1252
+CP1253=1|Cp1253
+CP1254=1|Cp1254
+CP1255=1|Cp1255
+CP1256=1|Cp1256
+CP1257=1|Cp1257
+CP1258=1|Cp1258
+ASCII_7=1|US-ASCII
+ASCII_8=1|US-ASCII
+ROMAN8=1|ISO-8859-1
+MAC=1|ISO-8859-1
+GREEK8=1|ISO-8859-7
+MACGRK2=1|ISO-8859-7
+MAC_CYR=1|ISO-8859-5
+SJIS=2|Shift_JIS
+BIG5=2|Big5
+BIG5HK=2|Big5-HKSCS
 KOI8=1|KOI8-R
 TIS620=1|TIS-620
-UNICODE=4|UTF-16
 DECKANJI=3|EUC_JP
+EUCCNS=2|x-EUC-CN
+EUCJIS=3|EUC-JP
 EUCGB=2|x-EUC-CN
 EUCKSC=2|EUC-KR
+UTF8=4|UTF-8
+UNICODE=4|UTF-16
+
+# Also map charset names back to themselves so that they can be used in the URL
+# with their Java name, not only the obscure SQL Server denomination.
+
+ISO-8859-1=1|ISO-8859-1
+ISO-8859-2=1|ISO-8859-2
+ISO-8859-5=1|ISO-8859-5
+ISO-8859-6=1|ISO-8859-6
+ISO-8859-7=1|ISO-8859-7
+ISO-8859-8=1|ISO-8859-8
+ISO-8859-9=1|ISO-8859-9
+ISO-8859-15=1|ISO-8859-15
+CP932=2|windows-31j
+CP936=2|x-mswin-936
+US-ASCII=1|US-ASCII
+DHIFT_JIS=2|Shift_JIS
+BIG5-HKSCS=2|Big5-HKSCS
+KOI8-R=1|KOI8-R
+TIS-620=1|TIS-620
+EUC_JP=3|EUC_JP
+X-EUC-CN=2|x-EUC-CN
+EUC-KR=2|EUC-KR
+UTF-8=4|UTF-8
+UTF-16=4|UTF-16
