@@ -1,6 +1,14 @@
 Changes from jTDS 0.9
 =========================
 
+10/02/2004 - Alin Sinpalean
+ o Corrected a number of charset related issues, the most important of which
+   was causing iso_1 to be mapped to ISO-8859-1 instead of Cp1252, which is the
+   actual charset used (at least by MS SQL Server).
+ o Also cleaned up Charsets.properties and added mappings from Java character
+   set names back to themselves so that they can be used in the URL or
+   Properties with their Java name.
+
 09/30/2004 - Alin Sinpalean
  o Added some more information (from the FreeTDS mailing list) on
    sp_cursoroption parameters.
